# Kriptomatte-Phase-1

./: .gitignore  codebase2md.ps1  pyproject.toml  readme.md
kriptomatte/application/: services.py
kriptomatte/domain/: repositories.py
kriptomatte/domain/model/: aggregates.py  entities.py  value_objects.py
kriptomatte/domain/services/: hashing.py  masking.py  visualization.py
kriptomatte/infrastructure/: factories.py
kriptomatte/infrastructure/io/: file_system.py  image_writer.py
kriptomatte/infrastructure/logging/: logger.py
kriptomatte/infrastructure/persistence/: exr_repository.py
kriptomatte/interface/: cli.py
kriptomatte_docs/logseq/: custom.css
kriptomatte_docs/pages/: Domain.md  Infrastructure.md  Services.md
