[project]
name = "kriptomatte-phase-1"
version = "0.0.14"
description = "Decode Cryptomattes in EXR file to PNG masks."
readme = "README.md"
requires-python = "~=3.11.0"
dependencies = [
  "numpy",
  "pillow",
  "openexr",
  "imath",
]

[project.urls]
Homepage = "https://github.com/Risiamu/Kriptomatte-Phase-1"
Issues = "https://github.com/Risiamu/Kriptomatte-Phase-1/issues"
